[package]
name = "http_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
mini-redis = "0.4.1"
reqwest = {version = "0.11.13", features = ["json"] }
serde = "1.0.152"
tokio = { version = "1.23.0", features = ["full"] }
